chamber/styles/small.css
@charset "UTF-8";

:root {
    --base-font-size: 16px;
    --heading-fonts: "Arvo", serif;
    --content-fonts: "Lato", sans-serif;
    /* My Color Pallet */
    /* https://coolors.co/111378-e63946-f1faee-a8dadc-457b9d */
    --primary-color: rgba(17, 69, 120, 1);
    --secondary-color: rgb(69, 123, 157);
    --third-color: rgb(255, 255, 255);
    --accent-color-1: rgb(230, 57, 70);
    --accent-color-2: rgb(168, 218, 220);
    --accent-color-3: rgba(238, 13, 13, 0.75);
}

/*----------- apply a natural box layout model to all elements --------------*/
* {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    font-family: var(--content-fonts);
}

body {
    margin: 0;
    padding: 0;
    font-size: var(--base-font-size);
    font-family: var(--content-fonts);
}

h1, h2, h3, h4 {
    font-family: var(--heading-fonts);
    font-weight: bold;
}

a {
    text-decoration: none;
    font-weight: bold;
}

#comejoinus {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    background-color: var(--accent-color-1);
    color: var(--third-color);
    text-align: center;
    font-size: 0.8rem;
    padding: .5rem 0;
}

#closeAlert {
    font-size: 1.5rem;
    padding-right: 1rem;
}

header {
    background-color: var(--primary-color);
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    margin-bottom: 1rem;
    align-items: center;
}

header .currentdate {
    color: #fff;
    width: 100%;
    text-align: center;
    margin: 0.5rem;
    padding: 1rem;
    border: 1px solid var(--secondary-color);
    background-color: var(--secondary-color);
}

header .logo {
    width: 20vw;
    padding: 0.3rem;
}

#hamburgerBtn {
    /* margin: .2rem 2vw; */
    background: transparent;
    border: none;
    font-size: 2rem;
    color: var(--third-color);
}

nav {
    background-color: var(--primary-color);
    width: 100%;
    display: none;
}

nav ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

nav ul a {
    display: block;
    padding: 0.8rem 2vw;
    text-decoration: none;
    color: var(--third-color);
    border-top: 1px solid rgba(0, 0, 0, 0.5);
    font-weight: bold;
}

nav ul li.active a {
    background-color: var(--accent-color-3);
    color: #fff;
}

nav ul li a:hover {
    background-color: var(--accent-color-2);
    color: var(--accent-color-1);
    font-weight: bold;
}

/* nav ul { display: none; } */
nav.open {
    display: block;
}

/* Display hamburger button and hide X  */
#hamburgerBtn span:nth-child(1) {
    display: block;
}
#hamburgerBtn span:nth-child(2) {
    display: none;
}

/* Display X and hide hamburger button */
#hamburgerBtn.open span:nth-child(1) {
    display: none;
}
#hamburgerBtn.open span:nth-child(2) {
    display: block;
}

.socialmedia {
    flex: 1 0 auto;
    text-align: right;
}

.socialmedia a {
    color: var(--third-color);
    font-size: 2rem;
    padding: 0 0.5rem;
}

.socialmedia a:hover {
    color: var(--accent-color-2);
}

main {
    display: grid;
    gap: 0.5rem;
    grid-template-columns: 1fr;
    /* grid-template-rows: repeat(5, 100px); */
    padding: 0 0.5rem;
}

main div {
    border: 1px solid black;
    padding: 1rem;
    background-color: var(--secondary-color);
    color: var(--third-color);
}

.herobanner {
    color: var(--third-color);
    padding: 0;
    position: relative;
    /* height: 30vh; keep the herobanner in certain size for viewport */
}

.herobanner picture img {
    width: 100%;
}

.herobanner h2 {
    position: absolute;
    top: 0;
    left: 0.5rem;
    color: var(--accent-color-1);
}

.glass {
    position: absolute;
    right: 1rem;
    bottom: 1rem;
    background: rgba(255, 255, 255, 0.2);
    border-radius: 16px;
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(5px);
    border: 1px solid rgba(255, 255, 255, 0.3);
    width: 50%;
    /* margin-top: 20%; */
    /* margin-left: 50%; */
    text-align: center;
    font-weight: bold;
}

.glass:hover {
    background: rgba(230, 57, 70, 0.2);
    border-radius: 16px;
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(5px);
    border: 1px solid rgba(238, 13, 13, 0.3);
    cursor: pointer;
}

.glass a {
    text-decoration: none;
    color: var(--accent-color-1);
}

.events {
    text-align: center;
}

.weather {
    display: grid;
    grid-template-columns: repeat(2, auto);
    background-color: var(--secondary-color);
    grid-template-areas: 
        "weatherTitle weatherTitle"
        "weatherIcon temp"
        "weatherStatus weatherStatus"
        "windCondition windCondition";
    color: var(--third-color);
}

.weather div {
    border: none;
    padding: 0;
}

.weather h2 {
    grid-area: weatherTitle;
    text-align: center;
}

.weather img {
    grid-area: weatherIcon;
    justify-self: center;
    height: 7rem;
}

.weather #temperature {
    grid-area: temp;
    text-align: center;
    font-size: 2rem;
    align-self: center;
}

.weather #weatherStatus {
    grid-area: weatherStatus;
    justify-self: end;
    font-size: 2rem;
    padding: 1.5rem 0;
}

.weather #windConditions {
    grid-area: windCondition;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    font-size: 1.4rem;
}

.weather #windConditions div:nth-child(even) {
    text-align: right;
}

.spotlight {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
}

/* .spotlight1 {
    display: flex;
    flex-direction: column;
    justify-content: center;
} */

p a {
    display: block;
    text-align: center;
    color: var(--third-color);
}

.spotlight3 {
    display: none;
}

.join {
    display: none;
}

footer {
    background-color: var(--primary-color);
    color: var(--third-color);
    text-align: center;
    display: block;
    width: 100%;
    margin-top: 1rem;
    padding-bottom: 1.5rem;
}

footer img {
    width: 35vw;
    padding: 0.5rem;
}

footer h3 {
    margin-bottom: 0;
}

footer a {
    text-decoration: none;
    color: var(--third-color);
}

footer a:hover {
    color: var(--accent-color-1);
}

footer address {
    margin-bottom: 1rem;
}

